<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">慈善喜</string>
    <string name="title_project">项目</string>
    <string name="title_volunteer">义工</string>
    <string name="title_commun">交流圈</string>
    <string name="title_personal">我的</string>
    <string name="project_info">项目详情</string>
    <string name="donate_count">已捐人次</string>
    <string name="love_count">已有爱心</string>
    <string name="love_progress">爱心进度</string>
    <string name="volunteer_count">已有义工</string>
    <string name="project_introduce">项目介绍</string>
    <string name="support_info">资助方详情</string>
    <string name="executor_info">执行方详情</string>
    <string name="view_my_protocol">查看我的协议</string>
    <string name="manage_protocol">管理协议</string>
    <string name="add_protocol">新增协议</string>
    <string name="edit">编辑</string>
    <string name="fix">修改</string>
    <string name="delete">删除</string>
    <string name="approve">同意</string>
    <string name="disapprove">拒绝</string>
    <string name="free">免费</string>
    <string name="need_pay">付费</string>
    <string name="finish">完成</string>
    <string name="my_love_count">我的爱心:</string>
    <string name="love_value">爱心值</string>
    <string name="love_value_less">愛心值不足</string>
    <string name="finish_already">已完成</string>
    <string name="executing">正在执行</string>
    <string name="commons">评论</string>
    <string name="input_content">输入内容*</string>
    <string name="platform_manager">【Platform Manager】</string>

    <string name="photos">图片</string>
    <string name="share">分享</string>
    <string name="communicate">互动</string>
    <string name="click_attentions">点击关注</string>
    <string name="attentions_already">已关注</string>
    <string name="be_volunteer">申请义工</string>
    <string name="volunteer_recruit">公益招聘工作</string>
    <string name="send_massage">发消息</string>
    <string name="open_class">公开课</string>
    <string name="collection_finish">筹集已完成</string>
    <string name="chose_time">选择时间*</string>
    <string name="chose_pic">选择图片</string>
    <string name="message_and_check">通知审核</string>
    <string name="person">人</string>
    <string name="av_detail">广告详情</string>
    <string name="input_notice">请输入</string>
    <string name="agreed">同意</string>
    <string name="volunteer_protocol">《义工协议》</string>
    <string name="send_love">捐赠爱心</string>
    <string name="send_all">顷我所有</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="chose_avatar">选择头像</string>
    <string name="public_recruitment">发布招聘</string>
    <string name="work_content">工作内容</string>
    <string name="phone">电话</string>
    <string name="chose_already">已选</string>
    <string name="org_detail">机构详情</string>
    <string name="org_apply">申请机构</string>
    <string name="organization">机构</string>
    <string name="no_define">未指定</string>
    <string name="sponsored_count">个资助项目</string>
    <string name="project_progress">项目进度</string>
    <string name="add_process">添加活动过程</string>
    <string name="edit_process">编辑活动过程</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="add">添加</string>
    <string name="class_publish">专业知识发布</string>
    <string name="edit_class">编辑课程信息</string>
    <string name="publish">发布</string>
    <string name="publish_project">发起项目</string>
    <string name="volunteer_audit">义工审核</string>
    <string name="public_card">发布帖子</string>
    <string name="edit_card">修改帖子</string>
    <string name="card_detail">帖子详情</string>
    <string name="content">内容</string>
    <string name="upload_pic">照片上传</string>
    <string name="employ_help">招工与求助</string>
    <string name="latest_topic">最新话题</string>
    <string name="hot_topic">精华话题</string>
    <string name="type">类型</string>
    <string name="title_in30">标题(30字以内)*</string>
    <string name="about_volunteer">关于公益同行</string>
    <string name="theory_of_charity">慈善理论</string>
    <string name="execute_charity">慈善执行</string>
    <string name="other">其他</string>
    <string name="email">邮件</string>
    <string name="work_place">工作地点</string>
    <string name="work_time">工作时间</string>
    <string name="recruit_title">招聘工作名称</string>
    <string name="recruit_detail">招聘详情</string>
    <string name="recruit_edit">修改招聘</string>
    <string name="in_recruitment">招聘中</string>
    <string name="recruitment_finish">招聘结束</string>
    <string name="protocol">协议</string>
    <string name="chose_protocol">选择协议</string>
    <string name="recruit_num">招聘人数</string>
    <string name="start_time">截止时间</string>
    <string name="finish_time">截止时间</string>
    <string name="end_time">截止时间</string>
    <string name="always">长期有效</string>
    <string name="speaker">主讲</string>
    <string name="record_time">录制时间</string>
    <string name="follow">关注</string>
    <string name="follower">关注者</string>
    <string name="join_ogn">参与组织</string>
    <string name="passed">审核通过</string>
    <string name="un_passed">审核不通过</string>
    <string name="see_detail">查看详情</string>
    <string name="volunteer_num">义工人数</string>
    <string name="volunteer_ogn_joined">参加的义工组织</string>
    <string name="volunteer_employ_joined">参加的义工招聘</string>


    <string name="facebook_app_id">234238483822959</string>
    <string name="fb_login_protocol_scheme">fb234238483822959</string>
    <string name="_1_app_font_color_b61e17_font2">1.在转账时请在备注中写入您在慈善易APP上的</string>
    <string name="_1_app_font_color_b61e17_font">注册用户名和要资助的项目名称。</string>
    <string name="_2_font_color_b61e17_font">2.转账完成，平台方查收后将在该项目捐赠方处显示您的用户名。</string>
    <string name="_2_font_color_b61e17_font2">如转账时未填写注册用户名，将显示您的账户实名。</string>
    <string name="_1_1_nbsp_nbsp_quot_quot_1_2_nbsp_nbsp_1_3_nbsp_nbsp">一、总则 \n1.1    用户应当同意本协议的条款并按照页面上的提示完成全部的注册程序。用户在进行程序过程中点击\"同意\"按钮即表示用户与数据堂达成协议，完全接受本协议项下的全部条款。 \n1.2    用户注册成功后，数据堂将给予每个用户一个用户账号和相应的密码，该用户账号和密码由用户负责保管；用户应当对以其用户账号进行的所有活动和时间负法律责任。 \n1.3  用户可以使用数据堂各个频道单项服务，当用户使用数据堂各单项服务时，用户的使用行为视为其对该单项服务的服务网条款以及数据堂在该单项服务中发出的各类公告的同意。</string>
    <string name="title_activity_thank_give_love">ThankGiveLoveActivity</string>
    <string name="title_activity_send_love">SendLoveActivity</string>

</resources>
