<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".model.project.ui.activity.PublishProgressActivity">

    <include layout="@layout/frame_toolbar"/>

    <EditText
        android:id="@+id/v_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:maxLength="30"
        android:padding="10dp"
        android:textSize="14sp"
        android:hint="@string/title_in30"/>
    <EditText
        android:id="@+id/v_edit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:hint="@string/input_content"
        android:background="@drawable/shape_strok"
        android:padding="10dp"/>

    <com.mmy.charitablexi.widget.MyEditView
        android:id="@+id/v_2_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/chose_time"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="拍照上传活动照片*"
        android:textSize="15sp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint"/>

    <TextView
        android:id="@+id/v_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="提交内容"
        android:textColor="@color/colorPrimaryDark"/>
</LinearLayout>