<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".model.project.ui.activity.SendLoveActivity"
    >
    <TextView
        android:id="@+id/v_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_love_count"/>
    <TextView
        android:id="@+id/v_love_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/v_love"
        android:text="0"/>
    <View
        android:id="@+id/line"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/v_love_count"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        />
    <EditText
        android:id="@+id/v_love_et"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_weight="1"
        android:background="@drawable/rc_edit_text_background"
        android:hint="0"
        android:textSize="14sp"/>
    <TextView
        android:layout_toRightOf="@+id/v_love_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/v_love_et"
        android:text="@string/love_value"/>


    <CheckBox
        android:id="@+id/v_check_all"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/v_love_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/send_all"/>
    <TextView
        android:id="@+id/v_summit"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="确认捐赠"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</RelativeLayout>