<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.volunteer.ui.activity.RecruitInfoActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/frame_toolbar"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide"/>

            <ImageView
                android:id="@+id/v_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/v_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:text="招聘工作名称"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/shape_point_blue"
                android:drawablePadding="8dp"
                android:text="@string/work_place"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/v_work_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="6dp"
                android:text="广西南宁青秀区麻布新村"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/shape_point_blue"
                android:drawablePadding="8dp"
                android:text="@string/work_time"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/v_work_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="6dp"
                android:text="2018-03-26 08:22~2018-03-26 08:22"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/shape_point_blue"
                android:drawablePadding="8dp"
                android:text="@string/other"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/v_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="6dp"
                android:text="不可描述"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/shape_point_blue"
                android:drawablePadding="8dp"
                android:text="@string/end_time"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/v_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="6dp"
                android:text="2018-05-11"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/shape_point_blue"
                android:drawablePadding="8dp"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/v_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="6dp"
                android:text="188245624562"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/shape_point_blue"
                android:drawablePadding="8dp"
                android:text="Email"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/v_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="6dp"
                android:text="lucas_developer@163.com"
                android:textSize="12sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/volunteer_count"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/v_need_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableRight="@mipmap/ic_jiantou_right"
                    android:text="4/50"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/divide2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/work_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide"/>

            <TextView
                android:id="@+id/v_work_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="5dp"
                android:text=""
                android:textStyle="bold"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_share"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/v_request_volunteer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="Contact"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/v_give_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/colorPrimary"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="Apply"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
