<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="15dp"
                                    android:layout_marginRight="15dp"
                                    android:layout_marginTop="15dp"
                                    android:background="?android:attr/selectableItemBackground"
                                    app:cardCornerRadius="8dp"
                                    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/v_icon"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/v_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_project_item_car_bg"
                android:padding="3dp"
                android:text="乡村教育"
                android:textColor="@color/mow_white_color"/>

            <TextView
                android:id="@+id/v_address"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:maxLines="15"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@color/colorPrimary"
                android:text="addrress"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/v_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="LISTEN TO YOUR CHILD`S VOICE."
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/v_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="let excellent education cover more people and achieve.."
            android:textColor="@color/hint"
            android:textSize="13sp"/>


        <View
            android:id="@+id/v_devide"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hint"/>

        <LinearLayout
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/v_donate_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="214"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/donate_count"
                    android:textColor="@color/hint"
                    android:textSize="12sp"/>
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="20dp"
                android:background="@color/hint"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/v_love_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="522K"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/love_count"
                    android:textColor="@color/hint"
                    android:textSize="12sp"/>
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="20dp"
                android:background="@color/hint"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/v_love_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50%"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/love_progress"
                    android:textColor="@color/hint"
                    android:textSize="12sp"/>
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="20dp"
                android:background="@color/hint"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/v_volun_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/volunteer_count"
                    android:textColor="@color/hint"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>